2006-05-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/entry:
	  Renamed from lib/gaupol/gtk/entries.

2006-05-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/entries/integer.py:
	* lib/gaupol/gtk/entries/test:
	* lib/gaupol/gtk/entries/test/__init__.py:
	* lib/gaupol/gtk/entries/test/test_integer.py:
	* lib/gaupol/gtk/entries/test/test_time.py:
	* lib/gaupol/gtk/entries/time.py:
	  Cleaned up code and separated testing.

	* tools/exec:
	  New file.

2006-05-19  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol:
	  Always call sys.path.insert on source run.

	* lib/gaupol/gtk/main.py:
	  Fixed --no-translation option.
	  Minor changes.

	* lib/gaupol/gtk/output.py:
	* lib/gaupol/gtk/test:
	* lib/gaupol/gtk/test/__init__.py:
	* lib/gaupol/gtk/test/test_output.py:
	  Cleaned up code and separated testing.

	* tools/py.test:
	  Fixed docstring.

2006-05-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/text/finder.py:
	* lib/gaupol/base/text/parser.py:
	* lib/gaupol/base/text/test:
	* lib/gaupol/base/text/test/__init__.py:
	* lib/gaupol/base/text/test/test_finder.py:
	* lib/gaupol/base/text/test/test_parser.py:
	  Made Parser a subclass of Finder.
	  Cleaned up code and separated testing.
	  Fixed all errors encountered while testing.

	* lib/gaupol/base/delegates/find.py:
	* lib/gaupol/base/delegates/format.py:
	  Adapted to above changes.

2006-05-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/position/test/test_calc.py:
	  Fixed whitespace.

	* lib/gaupol/base/util/wwwlib.py:
	  (browse_url): Added support for KDE and Mac OSX defaults.

2006-05-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/ui/menubar.xml:
	* lib/gaupol/base/delegates/__init__.py:
	* lib/gaupol/base/delegates/action.py:
	* lib/gaupol/base/delegates/edit.py:
	* lib/gaupol/base/delegates/position.py:
	* lib/gaupol/base/files/ass.py:
	* lib/gaupol/base/files/mpl2.py:
	* lib/gaupol/base/files/ssa.py:
	* lib/gaupol/base/files/subviewer2.py: