@@ -17,8 +17,8 @@
 # Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 
 
-from gaupol.gtk.entries.integer import EntryInteger
-from gaupol.test                import Test
+from gaupol.gtk.entry.integer import EntryInteger
+from gaupol.test              import Test
 
 
 class TestEntryInteger(Test):
